[metadata]
author = Jörn Heissler
author_email = NOSPAM-hacmec@joern.heissler.de
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.5
description = ACME Client library
keywords =
    ACME
    X.509
license = MIT
long_description = file: README.rst
name = hacmec
url = https://github.com/joernheissler/hacmec
version = attr: hacmec.VERSION

[options]
packages = find:
zip_safe = True

[bdist_wheel]
python-tag = py3
