[metadata]
author = Jörn Heissler
author_email = NOSPAM-hacmec@joern.heissler.de
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
description = ACME Client library
keywords =
    ACME
    X.509
license = MIT
long_description = file: README.rst
name = hacmec
url = https://github.com/joernheissler/hacmec
version = attr: hacmec.VERSION

[options]
include_package_data = False
install_requires =
    cryptokey
    httplink
packages = find:
python_requires = >= 3.7
zip_safe = True

[options.package_data]
hacmec =
    py.typed

[bdist_wheel]
python-tag = py3

[mypy]
no_implicit_optional = True
mypy_path = stubs
